# CS2_Game

./: CMakeLists.txt  README.md  block.cpp  block.h  checkpoint.cpp  checkpoint.h  coin.cpp  coin.h  enemy.cpp  enemy.h  game.cpp  game.h  level.cpp  level.h  life.cpp  life.h  main.cpp  movingobject.cpp  movingobject.h  obstacle.cpp  obstacle.h  player.cpp  player.h  resources.qrc  score.cpp  score.h
